[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/prefabs/gui/Dialogue.gd" type="Script" id=1]
[ext_resource path="res://resources/art/gui/arrow_01c.png" type="Texture" id=2]
[ext_resource path="res://resources/art/sprites/almost_heroic/AH_SpriteSheet_People1.png" type="Texture" id=3]
[ext_resource path="res://resources/theme.tres" type="Theme" id=4]


[sub_resource type="Animation" id=1]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 930, 110 ), Vector2( 925, 110 ) ]
}

[node name="DialogueControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBox" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -482.0
margin_top = -150.0
margin_right = 482.0
margin_bottom = -30.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="DialogueBox"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="DialogueBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_clip_content = false
bbcode_enabled = true
bbcode_text = "Hello there! Welcome to the path of the Arara!
I hope you're ready! Let's check what happens if the string is super long and must be wrapped automatically. Does it suck like the other Label component or NOOOO!! IT WORKS!"
text = "Hello there! Welcome to the path of the Arara!
I hope you're ready! Let's check what happens if the string is super long and must be wrapped automatically. Does it suck like the other Label component or NOOOO!! IT WORKS!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="DialogueBox"]

[node name="NextIcon" type="Sprite" parent="DialogueBox"]
position = Vector2( 925, 110 )
rotation = 2.35619
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogueBox/NextIcon"]
anims/Idle = SubResource( 1 )

[node name="Portrait" type="Sprite" parent="DialogueBox"]
position = Vector2( 40, 60 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 160, 0, 16, 16 )
[connection signal="tween_completed" from="DialogueBox/Tween" to="." method="_on_Tween_tween_completed"]
